Patch JVM v8 settings and make sed command more flexible